# web3-diagram

./: .gitignore  Cargo.toml  README.md  do-build.sh  do-publish.sh  do-run.sh  docs.sh  log.txt  run.sh
cargo-diagram/: Cargo.toml
cargo-diagram/src/: main.rs  svg.rs
counter/: Cargo.toml
counter/src/: lib.rs
example/: Cargo.toml  example.sh
example/res/: diagram.md
example/src/: events.rs  lib.rs  main.rs  some_fancy_impl.rs
example/src/some_fancy_impl/: helpers.rs  trait_impl.rs
example/src/subdir/: helpers.rs
mermaid-markdown-api/: Cargo.toml
mermaid-markdown-api/src/: lib.rs  md_api.rs  scanner_pipeline.rs
mermaid-markdown-api/src/md_api/: flow_chart.rs  md_api.rs  mod.rs
mermaid-markdown-api/src/md_api/objects/: connection.rs  mod.rs  node.rs
mermaid-markdown-api/src/md_api/syntax/: flow_chart.rs  mod.rs
mermaid-markdown-api/src/objects/: connection.rs  mod.rs  node.rs
mermaid-markdown-api/src/syntax/: flow_chart.rs  mod.rs
near-macros/: Cargo.toml
near-macros/src/: lib.rs
near-macros/src/core_impl/metadata/: metadata_generator.rs
playing-with-syn/: Cargo.toml
playing-with-syn/src/: main.rs
scanner-syn/: Cargo.toml
scanner-syn/src/: contract_descriptor.rs  lib.rs
scanner-syn/src/core_impl/: mod.rs
scanner-syn/src/core_impl/code_generator/: impl_item_method_info.rs  item_impl_info.rs
scanner-syn/src/core_impl/info_extractor/: attr_sig_info.rs  impl_item_method_info.rs  item_fn_info.rs  item_impl_info.rs  item_trait_info.rs  mod.rs  statements_parser.rs
scanner-syn/src/core_impl/metadata/: metadata_generator.rs  metadata_visitor.rs  mod.rs
