[package]
name = "web3d"
version = "0.1.0"
edition = "2021"
authors = ["PrimeLab <info@primelab.io>"]
repository = "https://github.com/NearPrime/web3-diagram/"
license = "MIT OR Apache-2.0"
homepage = "https://primelab.io/"
description = """
Creating diagrams for near smart contracts
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
subprocess = "0.2.8"
minidom = "0.14.0"

usvg = "0.22.0"
resvg = "0.22.0"
svg2pdf = "0.3.0"
tiny-skia = "0.6.3"
scanner-syn = { path = "../scanner-syn", version = "0.1.0" }
mermaid-markdown-api={path = "../mermaid-markdown-api", version = "0.1.0"}
