[package]
authors = ["PrimeLab <support@primelab.io>"]
description = """
Creating diagrams for near smart contracts
"""
edition = "2021"
homepage = "https://primelab.io/"
include = [
  "src/**/*",
  "Cargo.toml",
]
license = "MIT OR Apache-2.0"
name = "web3d"
repository = "https://github.com/NearPrime/web3-diagram/"
version = "0.2.0"

# [[bin]]
# name="web3d"
# path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1.6", features = ["derive"]}
minidom = "0.14.0"
subprocess = "0.2.8"

mermaid-markdown-api = {path = "../mermaid-markdown-api", version = "0.2.0"}
resvg = "0.22.0"
scanner-syn = {path = "../scanner-syn", version = "0.2.0"}
svg2pdf = "0.3.0"
tiny-skia = "0.6.3"
usvg = "0.22.0"
