[package]
name = "example"
version = "0.1.0"
edition = "2018"

# [lib]
# crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "4.0.0-pre.7"
scanner-syn = {path = "../scanner-syn"}
mermaid-markdown-api={path = "../mermaid-markdown-api"}
serde = "1"
serde_json = "1"