[package]
name = "playing-with-syn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0.89", features = ["full", "extra-traits"]}
near-macros = {path = "../near-macros"}
walkdir = "2.3.2"
near-sdk = "4.0.0-pre.7"